# zac

./: .gitignore  AGENTS.md  README.md  bootstrap_zac_system.sh  primes.py  pyproject.toml  test.txt
.zac/: ISSUES.db.bak
.zac/skills/github-issue/: SKILL.md
.zac/skills/github-issue/scripts/: create_issue.sh
.zac/skills/issue/: SKILL.md
.zac/skills/issue/scripts/: add_comment.py  create_issue.py  list_comments.py  list_issues.py  update_issue_cost.py
.zac/skills/running-zac/: SKILL.md
.zac/skills/tmux/: SKILL.md
skills/: code-zac.md
skills/github-issue/: SKILL.md
skills/pdf-tools/: SKILL.md
skills/self-test/: SKILL.md
